[gd_scene load_steps=2 format=3 uid="uid://dnlnoj8jbvuor"]

[ext_resource type="Script" path="res://scripts/pausemenu.gd" id="1_b5enn"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b5enn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 0.01
max_value = 3.0
step = 0.01
value = 1.01

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HSlider"]
layout_mode = 0
offset_left = 87.0
offset_top = -5.0
offset_right = 255.0
offset_bottom = 47.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Enemy Spawning rate 0.1 - 3 sec"

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 108.0
offset_right = 45.0
offset_bottom = 132.0

[node name="Label2" type="Label" parent="CheckButton"]
layout_mode = 0
offset_left = 41.0
offset_top = -2.0
offset_right = 111.0
offset_bottom = 24.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Enemy 1"

[node name="CheckButton2" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 127.0
offset_right = 45.0
offset_bottom = 151.0

[node name="Label3" type="Label" parent="CheckButton2"]
layout_mode = 0
offset_left = 41.0
offset_top = -1.0
offset_right = 111.0
offset_bottom = 25.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Enemy 2"

[node name="CheckButton3" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 146.0
offset_right = 45.0
offset_bottom = 170.0

[node name="Label4" type="Label" parent="CheckButton3"]
layout_mode = 0
offset_left = 42.0
offset_top = -1.0
offset_right = 112.0
offset_bottom = 25.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Enemy 3"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HSlider" to="." method="_on_value_changed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="CheckButton2" to="." method="_on_check_button_2_toggled"]
[connection signal="toggled" from="CheckButton3" to="." method="_on_check_button_3_toggled"]
